--- a/Prototype/views/modMessages.ejs
+++ b/Prototype/views/modMessages.ejs
@@ -13,7 +13,7 @@
     <header>
         <%- include('partials/navbar') %>
     </header>
-    <div class="pageContent">
+    <div class="modPageContent">
         <h1><%= receiver.fname %> <%= receiver.lname %> </h1>
         <div class="messages">
             <% if (!messages || messages.length === 0) { %> 
