--- a/Prototype/views/voiceCall.ejs
+++ b/Prototype/views/voiceCall.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/public/modUsers.css">
+    <link rel="stylesheet" href="/public/home.css">
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://unpkg.com/simple-peer/simplepeer.min.js"></script>
     <title>Voice Call</title>
@@ -13,7 +15,7 @@
     <header>
         <%- include('partials/navbar') %>
     </header>
-    <div class="pageContent">
+    <div class="modPageContent">
         <h1> Voice Call</h1>
         <p id="status">Waiting for Call...</p>
         <button id="callBtn" class="voiceButton">Call</button>
