added date to filter, need to fix initial entry to analytics page to show all posts.

--- a/Prototype/public/analytics.css
+++ b/Prototype/public/analytics.css
@@ -10,7 +10,7 @@
 }
 
 .analytics-title{
-
+  
 }
 
 .analytics-posts {
@@ -22,4 +22,11 @@
 
 .leaderboard {
 
+}
+
+.filterBtns {
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    color: white;
 }
