--- a/Prototype/views/home.ejs
+++ b/Prototype/views/home.ejs
@@ -22,26 +22,55 @@
         </div>
 
         <div id="private-messages">
-            <h1>Private Messages</h1>
+
+            <h1 id="pm-header">Private Messages</h1>
             <% if (convUsers) { %>
-            <ul class="users">
-                <% convUsers.forEach(user => { %>
-                    <li class="user-info">
-                        <a href="/account/<%= user.otherUser.userId %>">
-                            <img src="/images/<%= user.otherUser.profilePic %>" class="rounded-circle" alt="profile" height="40">
-                            <span><%= user.otherUser.fname + " " + user.otherUser.lname %></span>
-                        </a>
-                        <span> <%= user.unreadCount %> unread messages</span>
-                        <form action="/getMessagePage" method="GET">
-                            <input type="hidden" name="convId" value="<%= user.convId %>">
-                            <button type="submit" class="btn btn-primary">Message</button>
-                        </form>
-                    </li>
-                    <br>
-                <% }) %> 
-            </ul>
-            <% } %>
-        </div>
+              <ul class="users">
+                <% convUsers.forEach(user=> { %>
+      
+                  <div style=" position: relative; margin-bottom: 80px; display: flex; flex-direction: column;">
+                    <div
+                      style="width: 351px; height: 75px; left: 7px; top: 7px; position: absolute; background: #16316b; box-shadow: 0px 0px 0px 7px rgba(0, 0, 0, 0.25); border-radius: 138px; border: 3px #fac104 solid">
+                    </div>
+                    <div class="grows"
+                      style="width: 40px; height: 40px; left: 29px; top: 24px; position: absolute; background: #D9D9D9; border-radius: 9999px">
+                      <a href="/account/<%= user.otherUser.userId %>">
+                        <img src="/images/<%= user.otherUser.profilePic %>" class="rounded-circle" alt="profile"
+                          class="rounded-circle" alt="profile" style="width: 100%; height: 100%; object-fit: cover;">
+                      </a>
+                    </div>
+                    <div style="width: 220px; height: 30px; left: 77px; top: 30px; position: absolute;">
+                      <a href="/account/<%= user.otherUser.userId %>">
+      
+                        <span class="pm-name">
+                          <%= user.otherUser.fname + " " + user.otherUser.lname %>
+                        </span>
+                      </a>
+                    </div>
+                  
+                    <form action="/getMessagePage" method="GET">
+                      <input type="hidden" name="convId" value="<%= user.convId %>" />
+                      <button type="submit"
+                        style="left: 261px; top: 14px; position: absolute; border: none; background: none; padding: 0;">
+                        <img class="grows" src="/images/whiteMail.png" alt="Message Icon" style="width: 60px; height: 60px;">
+                      </button>
+                    </form>
+      
+                    <div
+                      style="width: 17px; height: 17px; left: 262px; top: 12px; position: absolute; z-index: 1; font-size: 20px; font-family: Inter; font-weight: bold; word-wrap: break-word">
+                      <% if (user.unreadCount > 0) { %>
+                        <p style="color: rgb(255, 196, 0);"><%= user.unreadCount %></p>
+                        <% } else { %>
+                          <p style="color: rgb(255, 255, 255);"><%= user.unreadCount %></p>
+                          <% } %>
+                    </div>
+                  </div>
+                  
+                  <br />
+                  <% }) %>
+              </ul>
+              <% } %>
+          </div>
     </div>
 
 </body>
