--- a/Prototype/views/teacherResources.ejs
+++ b/Prototype/views/teacherResources.ejs
@@ -109,6 +109,11 @@
         padding: 20px;
     }
 
+    #resources-content {
+        
+        margin-top: 30px;
+    }
+
     #u-header {
         align-items: center;
         background: #16316b;
@@ -117,7 +122,7 @@
         color: white;
         padding: 10px 20px;
         margin-right: 200px;
-        margin-top: 100px;
+        margin-top: 30px;
     }
 
     #r-header {
