--- a/Prototype/views/teacherAnalytics.ejs
+++ b/Prototype/views/teacherAnalytics.ejs
@@ -24,10 +24,10 @@
         <h1 id="feed-header">
             <%= subject %> Analytics
         </h1>
-        <div class="filterBtns">
+        <div class="analyticsBtns">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#filterModal">
-                Filter
-            </button>
+                <img src="/images/filter.png" alt="Filter" width="40" height="40" />
+              </button>
             <a href="/analytics" class="btn btn-secondary">Reset</a>
         </div>
     </div>
