--- a/Prototype/views/reviewPage.ejs
+++ b/Prototype/views/reviewPage.ejs
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" type="text/css" href="/public/feed.css"> -->
     <link rel="stylesheet" href="../public/review.css">
     <title>Review Page</title>
 </head>
@@ -16,9 +15,22 @@
             <h1>Write a review!</h1>
         </div>
         <div class="content">
-            <form action="/makeReview" method="POST">
+            <form action="/makeReview" method="POST" onsubmit="return validateCourseId(event)">
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" required>
+                <div>
+                    <label for="subject" class="form-label">Subject</label>
+                    <select id="subject" name="subject" class="form-select" required>
+                        <option value="" selected disabled>Select a subject</option>
+                        <% subjects.forEach(subject => { %>
+                            <option value="<%= subject.catName %>"><%= subject.catName %></option>
+                        <% }) %>
+                    </select>
+                </div>
+                <div>
+                    <label for="courseId" class="form-label">Course ID</label>
+                    <input type="number" class="form-control" id="courseId" name="courseId" min="100" max="999" required />
+                </div>
                 <input type="hidden" name="revieweeId" value="<%= revieweeId %>">
                 <input type="hidden" name="convId" value="<%= convId %>">
                 <div><label for="description">Write a description of experience:</label></div>
@@ -47,6 +59,7 @@
             <h1>Thank You!</h1>
         </div>
     </div>
+
 </body>
 
 </html>
